--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,8 @@
         "twbs/bootstrap": "^3.3",
         "stfalcon/tinymce-bundle": "1.0",
         "friendsofsymfony/user-bundle": "~2.0@dev",
-        "doctrine/common": "2.5"
+        "doctrine/common": "2.5",
+        "symfony/twig-bundle": "2.8.16"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
