--- a/composer.json
+++ b/composer.json
@@ -33,14 +33,15 @@
         "symfony/monolog-bundle": "~2.4",
         "sensio/distribution-bundle": "~5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
-        "incenteev/composer-parameter-handler": "~2.0",
+        "incenteev/composer-parameter-hand%ler": "~2.0",
         "braincrafted/bootstrap-bundle": "dev-master",
         "symfony/assetic-bundle": "^2.8",
         "twbs/bootstrap": "^3.3",
         "stfalcon/tinymce-bundle": "1.0",
         "friendsofsymfony/user-bundle": "~2.0@dev",
         "doctrine/common": "2.5",
-        "twig/twig": "1.31.0"
+        "twig/twig": "1.31.0",
+        "doctrine/annotations": "1.2.7"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
