--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,8 @@
         "friendsofsymfony/user-bundle": "~2.0@dev",
         "doctrine/common": "2.5",
         "twig/twig": "1.31.0",
-        "doctrine/annotations": "1.2.7"
+        "doctrine/annotations": "1.2.7",
+        "doctrine/collections": "1.3.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
