--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -28,5 +28,10 @@ friends:
     type:     annotation
     prefix:    /
 
+concept:
+    resource: "@AloneBundle/Controller/Concept_Controller.php"
+    type:     annotation
+    prefix:    /
+
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
