--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,8 @@
         "doctrine/common": "2.5",
         "twig/twig": "1.31.0",
         "doctrine/annotations": "1.2.7",
-        "doctrine/collections": "1.3.0"
+        "doctrine/collections": "1.3.0",
+        "jms/serializer-bundle": "^2.3"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
