--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -35,3 +35,6 @@ concept:
 
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
+
+fos_js_routing:
+    resource: "@FOSJsRoutingBundle/Resources/config/routing/routing.xml"
