--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -2,11 +2,11 @@
 # Set parameters here that may be different on each deployment target of the app, e.g. development, staging, production.
 # http://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
 parameters:
-    database_host: db659548370.db.1and1.com
-    database_port: 3306
-    database_name: db659548370
-    database_user: dbo659548370
-    database_password: GoHome.com911
+    database_host: "db659548370.db.1and1.com"
+    database_port: "3306"
+    database_name: "db659548370"
+    database_user: "dbo659548370"
+    database_password: "GoHome911MYSQL"
     # You should uncomment this if you want use pdo_sqlite
     # database_path: "%kernel.root_dir%/data.db3"
 
